updated jwt config